# noticeboard

./: README.md  announce.py  archive.py  backup_and_archive.py  board.py  chores  chores.py  config.yaml  connections.csv  connectors.csv  divider.scad  experiment.py  experiments.py  fakeGPIO.py  hour  init.d_noticeboard  lamp.py  lifehacking_config.py  managed_directory.py  motion.py  motor-plate.scad  noticeboard  noticeboard-circuit-board.csv  noticeboard.crontab  noticeboard.el  noticeboard.org  noticeboard.py  noticeboardhardware.py  pi.csv  pins.py  playsound.py  pyproject.toml  quarter-1  quarter-2  quarter-3  requirements.txt  run-motion  set-nb-env-vars  socket-plate.scad  testgpio.py  (+2 more)
