[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "noticeboard"
authors = [{name = "John C. G. Sturdy", email = "jcg.sturdy@gmail.com"}]
description = "Python code for a smart noticeboard"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
version = "0.0.1"
dependencies = [
  "pyyaml",
  "RPi.GPIO",
  "picamera"
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]